Implement basic login logout

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -32,6 +32,10 @@ textarea{
     }
 }
 
+.btn{
+    margin-top: 30px;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -100,6 +104,23 @@ footer{
     }
 }
 
+@media (max-width: 800px){
+    footer {
+        small{
+            display: block;
+            float: none;
+            margin-bottom: lem;
+        }
+        ul{
+            float: none;
+            padding: 0;
+            li{
+                float: none;
+                margin-left: 0;
+            }
+        }
+    }
+}
 
 
 /* miscellaneous */
@@ -109,7 +130,7 @@ footer{
     float: left;
     width: 100%;
     margin-top: 45px;
-    @include box_sizing;
+    @include box_sizing();
 }
 
 /* sidebar */
@@ -155,7 +176,7 @@ input, textarea, select, .uneditable-input {
     border: 1px solid #bbb;
     width: 100%;
     margin-bottom: 15px;
-    @include box_sizing;
+    @include box_sizing();
 }
 
 input {
