--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= render "layouts/rails_default"%>
     <%= render "layouts/shim"%>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
