--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <%= content_for :title, "Edit user"%>
+<%= content_for :button_text, "Save changes"%>
 <h1>Update your profile</h1>
 
 <div class="row">
